--- a/src/app/record-entry/record-entry.component.less
+++ b/src/app/record-entry/record-entry.component.less
@@ -1,9 +1,9 @@
-jw-modal {
+jw-modal#record-entry-modal { // specify modal else will width apply to all modals
     .jw-modal {
-        position: fixed;
         width: 1000px;
         height: 750px;
         margin-left: -475px; /* Negative half of width. */
+
     }
 
 }
